# QTExample

./: CMakeLists.txt  CMakePresets.json  DialogoNuevoContacto.cpp  DialogoNuevoContacto.hpp  QTExample.cpp  QTExample.h  README.md  VentanaPrincipal.cpp  VentanaPrincipal.hpp  dialogoNuevoContacto.ui  formulario.ui
